--- a/app/views/forms/edit.html.haml
+++ b/app/views/forms/edit.html.haml
@@ -5,4 +5,4 @@
   =render :partial=>"forms/fields", :locals=>{:operation=>operation, :partial=>partial, :options=>options}
   .actions
     =submit_tag(tg(options[:submit]||:update), :disable_with=>tl(:please_wait))
-    =link_to(tg(options[:cancel]||:cancel), :back, (params[:dialog] ? {"data-close-dialog"=>params[:dialog]} : {}))
+    =link_to(tg(options[:cancel]||:cancel), :back, (params[:dialog] ? {"data-close-dialog"=>params[:dialog]} : {:tool=>:cancel}))
