--- a/app/views/production_chains/_conveyor.html.haml
+++ b/app/views/production_chains/_conveyor.html.haml
@@ -12,7 +12,7 @@
           %ul 
             %li=tl(:x_unit_per_second, :quantity=>conveyor.flow, :unit=>conveyor.unit.readable_name)
             =li_link_to(tl(:edit), {:controller=>:production_chain_conveyors, :action=>:edit, :id=>conveyor.id}, :class=>"icon im-edit")
-            =li_link_to(tl(:destroy), {:controller=>:production_chain_conveyors, :action=>:destroy, :id=>conveyor.id}, :confirm=>tl(:are_you_sure_you_want_to_delete), :method=>:delete, :class=>"icon im-destroy")
+            =li_link_to(tl(:destroy), {:controller=>:production_chain_conveyors, :action=>:destroy, :id=>conveyor.id}, "data-confirm" => tl(:are_you_sure_you_want_to_delete), :method=>:delete, :class=>"icon im-destroy")
 %td.conveyor-output
 -unless conveyor.target_quantity.zero?
   %td
