--- a/app/views/entities/show.html.haml
+++ b/app/views/entities/show.html.haml
@@ -2,7 +2,7 @@
 =toolbar do |t|
   -t.edit @entity
   -t.print_entity @entit
-  -t.destroy(@entity, :method=>:delete, :confirm=>tg(:are_you_sure_you_want_to_delete)) if @entity.destroyable?
+  -t.destroy(@entity, :method=>:delete, "data-confirm" => tg(:are_you_sure_you_want_to_delete)) if @entity.destroyable?
 
 =attributes_list(@entity) do |l|
   -l.attribute :last_name
