--- a/app/views/help/index.html.haml
+++ b/app/views/help/index.html.haml
@@ -10,8 +10,8 @@
             -for r in @results[0..@per_page-1]
               %li=render :partial=>'result', :locals=>{:result=>r}
           -if @results.size>@per_page
-            =link_to_function(tc(:other_results), "var list=$('other_results'); if (list.style.display=='none') {list.show();} else {list.hide();}", :class=>"icon im-more")
-            %ul#other_results{:style=>'display:none'}
+            =link_to(tc(:other_results), "#", "data-toggle-visibility" => "#other-results", :class=>"icon im-more")
+            %ul#other-results{:style=>'display:none'}
               -for r in @results[@per_page..-1]
                 %li=render :partial=>'result', :locals=>{:result=>r}
     %td#helpage{:valign=>:top}
