--- a/app/views/listing_nodes/_comparison.html.haml
+++ b/app/views/listing_nodes/_comparison.html.haml
@@ -1,5 +1,5 @@
 -listing_node = comparison
-=link_to_function(listing_node.comparison, "$(this).hide(); $('##{listing_node.key}_comparator_form').show();", :class=>"icon im-filter")
+=tool_to(listing_node.comparison, "#", "data-toggle-with" => "##{listing_node.key}_comparator_form", :tool => "filter")
 =form_tag({:controller=>:listing_nodes, :action=>:update, :id=>listing_node.id, :type=>"comparison"}, :method=>:put, :remote=>true, "data-update"=>"##{listing_node.key}_comparator", "data-type"=>:html, :id=>"#{listing_node.key}_comparator_form", :style=>"display: none;") do
   =select_tag("comparator", options_for_select(listing_node.comparators, listing_node.condition_operator))
   -if listing_node.sql_type.to_s == "date"
