--- a/app/views/listing_nodes/_position.html.haml
+++ b/app/views/listing_nodes/_position.html.haml
@@ -1,5 +1,5 @@
 -listing_node = position
-=form_tag({:controller=>:listing_nodes, :action=>:update, :id=>listing_node.id, :type=>"position"}, :method=>:put, :remote=>true, "data-update"=>"##{listing_node.key}_position", "data-type"=>:html) do
-  =link_to_function(listing_node.position, "$(this).hide(); var tf = $('##{listing_node.key}_position_tf'); tf.show(); tf.select(); tf.focus();", :id=>"#{listing_node.key}_position_lb", :class=>"icon im-sort")
-  =text_field_tag("position", listing_node.position, :size=>2, :id=>listing_node.key+"_position_tf", :style=>"display: none;", :onblur=>"$('#{listing_node.key}_position_lb').show(); this.hide();")
-  %span{:style=>'display: none;', :id=>listing_node.key+"_validate_position"}=submit_tag(tg(:validate))
+=tool_to(listing_node.position.to_s, "#", "data-toggle-with" => "##{listing_node.key}_position_form", :tool => "sort")
+=form_tag({:controller=>:listing_nodes, :action=>:update, :id=>listing_node.id, :type=>"position"}, :method=>:put, :remote=>true, "data-update"=>"##{listing_node.key}_position", "data-type"=>:html, :id => "#{listing_node.key}_position_form", :style=>"display: none;") do
+  =text_field_tag("position", listing_node.position, :size=>2)
+  =submit_tag(tg(:validate))
