--- a/app/views/listings/_node.html.haml
+++ b/app/views/listings/_node.html.haml
@@ -1,28 +1,29 @@
 .branch{:class=>(node.reflection? ? " reflection" : " column")}
   .shift
-  .item{:class=>"icon "+(node.reflection? ? "im-table" : "im-column")}
-    .item-detail
-      %table
-        %tr
-          -if node.reflection?
-            %td
-              =link_to_function(node.label, "toggleElement('#{node.key}')")
-              %span.attribute="(#{node.name})"
-            %td
-              =form_tag({:controller=>:listing_nodes, :action=>:create, :parent_id=>node.id}, :remote=>true, "data-update"=>"##{node.key}", "data-type"=>:html, :class=>:content) do
-                =select_tag(:nature, grouped_options_for_select(node.available_nodes))
-                =submit_tag(tg(:add))
-          -else
-            %td.export=check_box_tag(:exportable, "1", node.exportable, "data-remote"=>true, "data-url"=>url_for(:action=>:update, :controller=>:listing_nodes, :id=>node.id, :type=>"exportable"), "data-method"=>"put")
-            %td.link.label{:id=>"#{node.key}_label"}
-              =render(:partial=>"listing_nodes/column_label", :object=>node)
-              
-            %td.item-tool.comparator{:id=>"#{node.key}_comparator"}=render(:partial=>"listing_nodes/comparison", :object=>node)
-          -unless node.root?
-            -unless node.reflection?
-              %td.item-tool.position{:id=>"#{node.key}_position"}=render(:partial=>"listing_nodes/position", :object=>node)
-            %td.item-tool.delete
-              =link_to(tg(:delete), {:action=>:destroy, :controller=>:listing_nodes, :id=>node.id}, :remote=>true, "data-update"=>node.parent.key, "data-type"=>:html, :method=>:delete, :class=>"icon im-delete")
+  .item
+    %table
+      %tr
+        %td.ic
+          .icon{:class=>(node.reflection? ? "table" : "column")}
+        -if node.reflection?
+          %td
+            =link_to(node.label, "#", "data-toggle-visibility" => "##{node.key}")
+            %span.attribute="(#{node.name})"
+          %td
+            =form_tag({:controller=>:listing_nodes, :action=>:create, :parent_id=>node.id}, :remote=>true, "data-update"=>"##{node.key}", "data-type"=>:html, :class=>:content) do
+              =select_tag(:nature, grouped_options_for_select(node.available_nodes))
+              =submit_tag(tg(:add))
+        -else
+          %td.export=check_box_tag(:exportable, "1", node.exportable, "data-remote"=>true, "data-url"=>url_for(:action=>:update, :controller=>:listing_nodes, :id=>node.id, :type=>"exportable"), "data-method"=>"put")
+          %td.link.label{:id=>"#{node.key}_label"}
+            =render(:partial=>"listing_nodes/column_label", :object=>node)
+            
+          %td.item-tool.comparator{:id=>"#{node.key}_comparator"}=render(:partial=>"listing_nodes/comparison", :object=>node)
+        -unless node.root?
+          -unless node.reflection?
+            %td.item-tool.position{:id=>"#{node.key}_position"}=render(:partial=>"listing_nodes/position", :object=>node)
+          %td.item-tool.delete
+            =tool_to(tg(:delete), {:action=>:destroy, :controller=>:listing_nodes, :id=>node.id}, :remote=>true, "data-update"=>node.parent.key, "data-type"=>:html, :method=>:delete, :class=>"icon im-delete")
 
 -if node.reflection?
   .branches{:id=>node.key}=render(:partial=>"listings/reflection", :object=>node)
