--- a/app/views/journal_entries/_exchange_rate_form.html.haml
+++ b/app/views/journal_entries/_exchange_rate_form.html.haml
@@ -5,7 +5,7 @@
 -elsif @financial_year
   =formalize do |f|
     -if @journal.currency != @financial_year.currency
-      -f.field :journal_entry, :original_currency_rate, :label=>tl(:exchange_rate_from_x_to_y, :x=>Numisma[@journal.currency].name, :y=>Numisma[@financial_year.currency].name)
+      -f.field :journal_entry, :original_currency_rate, :label=>tl(:exchange_rate_from_x_to_y, :x=>@journal.currency.to_currency.name, :y=>@financial_year.currency.to_currency.name)
 
 =toolbar do |t|
   -t.link :new, {:controller=>:journal_entry_lines, :printed_on=>@journal_entry.printed_on, :journal_id=>@journal.id}, :remote=>true, "data-update"=>"#lines", "data-update-at"=>:bottom, "data-type"=>:html, :method=>:get
@@ -20,13 +20,13 @@
       %th.act
   %tfoot
     %tr#total.total{"data-valid-if-equality-between"=>"#entry-original-debit, #entry-original-credit"}
-      %th{"colspan"=>2}=tl(:total_in_currency, :currency=>Numisma[@journal.currency].name)
+      %th{"colspan"=>2}=tl(:total_in_currency, :currency=>@journal.currency.to_currency.name)
       %td#entry-original-debit.decimal{"colspan"=>2, "data-use"=>"input.original-debit"}=@journal_entry.original_debit
       %td#entry-original-credit.decimal{"colspan"=>2, "data-use"=>"input.original-credit"}=@journal_entry.original_credit
 
     -if @financial_year and@journal.currency != @financial_year.currency
       %tr.subtotal{"data-valid-if-equality-between"=>"#entry-debit, #entry-credit"}
-        %th{"colspan"=>2}=tl(:total_in_currency, :currency=>Numisma[@financial_year.currency].name)
+        %th{"colspan"=>2}=tl(:total_in_currency, :currency=>@financial_year.currency.to_currency.name)
         %td#entry-debit.decimal{"colspan"=>2, "data-use"=>"td.debit"}=@journal_entry.debit
         %td#entry-credit.decimal{"colspan"=>2, "data-use"=>"td.credit"}=@journal_entry.credit
 
